syntax = "proto3";

import "google/protobuf/empty.proto";

package manage;

option java_multiple_files = true;
option java_package = "com.manage";

message BookRequest{
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message BookResponse{
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message BookListResponse {
  repeated BookResponse books = 1;
}

message GeneralResponse{
  string message = 1;
}

service BookService{
  rpc findAll(google.protobuf.Empty) returns (BookListResponse);

  rpc findById(BookRequest) returns (BookResponse);

  rpc save(BookRequest) returns (BookResponse);

  rpc update(BookRequest) returns (BookResponse);

  rpc delete(BookRequest) returns (GeneralResponse);
}
